--- a/kubernetes/minio/services/minio-dashboard.yaml
+++ b/kubernetes/minio/services/minio-dashboard.yaml
@@ -4,8 +4,9 @@ metadata:
   name: minio-dashboard
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: http-dashboard
   selector:
-    zarantonello.dev/app: minio
-    zarantonello.dev/namespace: minio
+    apps.zarantonello.dev/name: minio
+    apps.zarantonello.dev/namespace: minio
