--- a/kubernetes/monitoring/services/mimir.yaml
+++ b/kubernetes/monitoring/services/mimir.yaml
@@ -4,8 +4,9 @@ metadata:
   name: mimir
 spec:
   ports:
-    - port: 80
+    - name: http
+      port: 80
       targetPort: http
   selector:
-    zarantonello.dev/app: mimir
-    zarantonello.dev/namespace: monitoring
+    apps.zarantonello.dev/name: mimir
+    apps.zarantonello.dev/namespace: monitoring
