feat: add fluxcd and reconciliation resources

--- a/kubernetes/blocky/deployments/blocky.yaml
+++ b/kubernetes/blocky/deployments/blocky.yaml
@@ -27,6 +27,11 @@ spec:
               protocol: UDP
             - containerPort: 8080
               name: http
+          readinessProbe:
+            exec:
+              command:
+                - /app/blocky
+                - healthcheck
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
