--- a/kubernetes/default/kustomization.yaml
+++ b/kubernetes/default/kustomization.yaml
@@ -2,5 +2,7 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: default
 resources:
+  - git-repository/github-iac-manifests.yaml
+  - kustomization/github-iac-manifests.yaml
   - namespace.yaml
   - service-accounts/default.yml
