--- a/.github/workflows/check-actionlint.yml
+++ b/.github/workflows/check-actionlint.yml
@@ -5,13 +5,12 @@ concurrency:
 jobs:
   check-actionlint:
     container:
-      image: docker.io/rhysd/actionlint:1.7.7@sha256:887a259a5a534f3c4f36cb02dca341673c6089431057242cdc931e9f133147e9
-      options: --user=0:0
+      image: docker.io/library/alpine:3.21.3
     runs-on: ubuntu-24.04
     steps:
-      - run: apk add --no-cache git
+      - run: apk add --no-cache git kustomize
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - run: actionlint
+      - run: kustomize build kubernetes
 
 "on":
   pull_request:
