--- a/.github/workflows/check-kustomize.yml
+++ b/.github/workflows/check-kustomize.yml
@@ -10,7 +10,8 @@ jobs:
     steps:
       - run: apk add --no-cache git kustomize
       - uses: actions/checkout@11bd71901bbe5b1630ceea73d27597364c9af683 # v4.2.2
-      - run: kustomize build kubernetes
+      # Output to file to avoid saving too many logs to github actions.
+      - run: kustomize build kubernetes --output cluster.yml
 
 "on":
   pull_request:
