chore: fix gitrepository name

--- a/kubernetes/default/git-repositories/github-iac-manifests.yaml
+++ b/kubernetes/default/git-repositories/github-iac-manifests.yaml
@@ -1,8 +1,7 @@
 apiVersion: source.toolkit.fluxcd.io/v1
 kind: GitRepository
 metadata:
-  name: podinfo
-  namespace: default
+  name: github-iac-manifests
 spec:
   interval: 10m
   ref:
