--- a/kubernetes/fluxcd/deployments/helm-controller.yaml
+++ b/kubernetes/fluxcd/deployments/helm-controller.yaml
@@ -29,6 +29,9 @@ spec:
               drop:
                 - ALL
             readOnlyRootFilesystem: true
+          volumeMounts:
+            - mountPath: /tmp
+              name: source-controller-tmp
       securityContext:
         fsGroup: 4936
         runAsGroup: 4936
@@ -37,3 +40,6 @@ spec:
         seccompProfile:
           type: RuntimeDefault
       serviceAccountName: helm-controller
+      volumes:
+        - emptyDir: {}
+          name: source-controller-tmp
