chore: rename tmp volumes

--- a/kubernetes/fluxcd/deployments/helm-controller.yaml
+++ b/kubernetes/fluxcd/deployments/helm-controller.yaml
@@ -31,7 +31,7 @@ spec:
             readOnlyRootFilesystem: true
           volumeMounts:
             - mountPath: /tmp
-              name: source-controller-tmp
+              name: helm-controller-tmp
       securityContext:
         fsGroup: 4936
         runAsGroup: 4936
@@ -42,4 +42,4 @@ spec:
       serviceAccountName: helm-controller
       volumes:
         - emptyDir: {}
-          name: source-controller-tmp
+          name: helm-controller-tmp
