--- a/kubernetes/mimir/kustomization.yaml
+++ b/kubernetes/mimir/kustomization.yaml
@@ -1,24 +1,17 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 configMapGenerator:
   - files:
-      - generated/configs/alloy.alloy
-    name: alloy
-  - files:
       - generated/configs/mimir.yaml
     name: mimir
 kind: Kustomization
-namespace: monitoring
+namespace: mimir
 resources:
-  - cluster-role-bindings/alloy.yml
-  - cluster-roles/alloy.yml
-  - daemon-sets/alloy.yaml
-  - namespace.yaml
-  - service-accounts/alloy.yml
-  - services/mimir.yaml
   - deployments/mimir.yaml
-  - service-accounts/default.yml
+  - namespace.yaml
   - persistent-volume-claims/mimir-data.yaml
   - persistent-volumes/mimir-data.yaml
+  - service-accounts/default.yml
+  - services/mimir.yaml
 secretGenerator:
   - envs:
       - generated/secrets/mimir-s3-credentials.env
