--- a/kubernetes/blocky/kustomization.yaml
+++ b/kubernetes/blocky/kustomization.yaml
@@ -9,4 +9,4 @@ resources:
   - deployments/blocky.yaml
   - namespace.yaml
   - service-accounts/default.yaml
-  - services/blocky.yaml
+  - services/dns.yaml
