--- a/kubernetes/mimir/deployments/mimir.yaml
+++ b/kubernetes/mimir/deployments/mimir.yaml
@@ -35,11 +35,11 @@ spec:
             readOnlyRootFilesystem: true
           volumeMounts:
             - mountPath: /etc/mimir
-              name: mimir-config
+              name: config
             - mountPath: /var/tmp/mimir
-              name: mimir-tmp
+              name: tmp
             - mountPath: /var/lib/mimir
-              name: mimir-data
+              name: data
       enableServiceLinks: false
       securityContext:
         fsGroup: 29201
@@ -51,9 +51,9 @@ spec:
       volumes:
         - configMap:
             name: mimir
-          name: mimir-config
+          name: config
         - emptyDir: {}
-          name: mimir-tmp
-        - name: mimir-data
+          name: tmp
+        - name: data
           persistentVolumeClaim:
             claimName: mimir-data
