--- a/kubernetes/node-exporter/kustomization.yaml
+++ b/kubernetes/node-exporter/kustomization.yaml
@@ -2,6 +2,6 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 namespace: node-exporter
 resources:
-  - daemon-sets/alloy.yaml
+  - daemon-sets/node-exporter.yaml
   - namespace.yaml
   - service-accounts/default.yml
