feat: add authelia

--- a/kubernetes/cloudflared/deployments/cloudflared.yaml
+++ b/kubernetes/cloudflared/deployments/cloudflared.yaml
@@ -22,7 +22,7 @@ spec:
               value: "true"
           envFrom:
             - secretRef:
-                name: grafana-env
+                name: cloudflared-env
           image: docker.io/cloudflare/cloudflared:2025.2.0@sha256:6e2df069aaf5a8c0bf304b674ff31c0ed07c974534b4303a8c6e57d93c6c9224
           name: cloudflared
           securityContext:
