--- a/kubernetes/authelia/deployments/authelia.yaml
+++ b/kubernetes/authelia/deployments/authelia.yaml
@@ -12,6 +12,8 @@ spec:
       labels:
         apps.zarantonello.dev/name: authelia
         apps.zarantonello.dev/namespace: authelia
+        monitoring.zarantonello.dev/job: authelia
+        monitoring.zarantonello.dev/port: "9959"
     spec:
       containers:
         - env:
@@ -25,8 +27,10 @@ spec:
           image: docker.io/authelia/authelia:4.38.19@sha256:46021dc20efdcc5cdc38a29e3050b8835429a155ae6215388ed3b793a02eb0ab
           name: authelia
           ports:
-            - containerPort: 3000
+            - containerPort: 9091
               name: http
+            - containerPort: 9959
+              name: http-metrics
           securityContext:
             allowPrivilegeEscalation: false
             capabilities:
