--- a/kubernetes/outline/deployments/redis.yaml
+++ b/kubernetes/outline/deployments/redis.yaml
@@ -7,6 +7,9 @@ spec:
     matchLabels:
       apps.zarantonello.dev/name: redis
       apps.zarantonello.dev/namespace: outline
+  # Persistent volume cannot be read by 2 replicas.
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
