--- a/kubernetes/kustomization.yaml
+++ b/kubernetes/kustomization.yaml
@@ -1,16 +1,16 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-  - alloy
+  # - alloy
   - authelia
   - blocky
   - cert-manager
   - cloudflared
   - default
   - fluxcd
-  - grafana
-  - mimir
+  # - grafana
+  # - mimir
   - minio
-  - node-exporter
+  # - node-exporter
   - outline
   - vaultwarden
