--- a/kubernetes/minio/kustomization.yaml
+++ b/kubernetes/minio/kustomization.yaml
@@ -1,4 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
+configMapGenerator:
+  - envs:
+      - generated/configs/minio.env
+    name: minio-env
 kind: Kustomization
 namespace: minio
 resources:
@@ -11,5 +15,5 @@ resources:
   - services/s3.yaml
 secretGenerator:
   - envs:
-      - generated/secrets/minio-root-credentials.env
-    name: minio-root-credentials
+      - generated/secrets/minio.env
+    name: minio-env
