--- a/kubernetes/vaultwarden/deployments/vaultwarden.yaml
+++ b/kubernetes/vaultwarden/deployments/vaultwarden.yaml
@@ -7,6 +7,9 @@ spec:
     matchLabels:
       apps.zarantonello.dev/name: vaultwarden
       apps.zarantonello.dev/namespace: vaultwarden
+  # Persistent volume cannot be read by 2 replicas.
+  strategy:
+    type: Recreate
   template:
     metadata:
       labels:
