chore: fix lints

--- a/k3s-config/var/lib/rancher/k3s/server/psa.yaml
+++ b/k3s-config/var/lib/rancher/k3s/server/psa.yaml
@@ -11,7 +11,8 @@ plugins:
         warn: restricted
         warn-version: latest
       exemptions:
-        namespaces: [kube-system]
+        namespaces:
+          - kube-system
         runtimeClasses: []
         usernames: []
       kind: PodSecurityConfiguration
